# pila

./: .env.test  .gitignore  CLAUDE.md  PLAN.md  README.md  conftest.py  docker-compose.yml  pytest.ini
.claude/: settings.local.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/api/: config.py  database.py  main.py
backend/api/dependencies/: __init__.py  auth.py  branch_scope.py
backend/api/migrations/: env.py
backend/api/migrations/versions/: 001_initial_schema.py  675bda9e8c88_add_email_to_user_sessions.py  b7f4a1c9d2e3_multi_branch_users.py  c01ad1b96c63_add_password_sessions_table.py  e21727361a8d_user_sessions_store_full_access_token.py
backend/api/models/: __init__.py  activity_log.py  booking.py  branch.py  customer.py  customer_hour.py  google_integration.py  order.py  package.py  partner.py  permission.py  trainer.py  user.py
backend/api/routers/: activity_log.py  auth.py  bookings.py  branches.py  cancel_policy.py  caretakers.py  customer_hours.py  customers.py  dashboard.py  google_settings.py  help.py  integrity.py  orders.py  packages.py  permissions.py  security.py  signature_print.py  trainers.py  users.py  validation.py
backend/api/services/: activity_log.py  auth.py  bookings.py  branches.py  caretakers.py  customer.py  customer_hours.py  customers.py  dashboard.py  orders.py  packages.py  page_access.py  permissions.py  trainers.py  users.py
backend/api/utils/: auth.py
docs/: 00_coding_standards.md  01_fe_requirements_analysis.md  02_fe_testcases_V_0_2.md  03_be_testcases_V_0_2.md  05_be_design.md  (+8 more)
(+148 files in other folders)
